# tauri-rspc-prisma

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.cjs  LICENSE  README.md  cargo.toml  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
core/: .gitignore  Cargo.toml
core/src/: api.rs  db.rs  lib.rs  utils.rs
crates/prisma/: Cargo.toml
prisma/: schema.prisma
prisma-cli/: cargo.toml
prisma/migrations/: README.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  main.rs
src/routes/: index.tsx
src/types/: bindings.ts
