[package]
name = "tauri-rspc-prisma-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "1.6.5", features = ["api-all"] }
platform-dirs = "0.3.0"
prisma-client-rust = { workspace = true }
rspc = { workspace = true, features = ["uuid", "tauri"] }
