[package]
name = "tauri-rspc-prisma"
description = "A Tauri + rspc + Prisma app."
version = "0.1.0"
authors = ["tomheaton"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32.0", features = ["full"] }
prisma-client-rust = { workspace = true }
rspc = { workspace = true, features = ["uuid", "tauri"] }
tauri-rspc-prisma-core = { path = "../core" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
