[package]
name = "tauri-rspc-prisma"
description = "A minimal Tauri + rspc + Prisma example app."
version = "0.1.0"
authors = ["tomheaton"]
license = "MIT"
repository = "https://github.com/tomheaton/tauri-rspc-prisma"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", default-features = false, features = [
  "migrations",
  "mocking",
  "rspc",
  "specta",
  "sqlite",
  "sqlite-create-many",
] }
rspc = "0.2"
rspc-tauri = "0"
specta = "1"
tauri-specta = { version = "1", features = ["typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
